[gd_scene load_steps=5 format=3 uid="uid://b87esord2f7op"]

[ext_resource type="FontFile" uid="uid://b2eeuc8u1hno5" path="res://resources/fonts/LibertinusMono-Regular.woff2" id="1_dudxa"]
[ext_resource type="Script" path="res://menu.gd" id="1_rtr2h"]

[sub_resource type="Theme" id="Theme_ftatf"]
default_font = ExtResource("1_dudxa")

[sub_resource type="LabelSettings" id="LabelSettings_q4mve"]
font_size = 50

[node name="Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_ftatf")
script = ExtResource("1_rtr2h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.0196078, 0.0862745, 0.313726, 1)

[node name="MenuItems" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="MenuItems"]
layout_mode = 2
size_flags_vertical = 0
text = "Wizard Duels"
label_settings = SubResource("LabelSettings_q4mve")
horizontal_alignment = 1

[node name="HostBar" type="HBoxContainer" parent="MenuItems"]
layout_mode = 2

[node name="HostButton" type="Button" parent="MenuItems/HostBar"]
layout_mode = 2
text = "Start a Duel as Host"

[node name="NumWizButton" type="OptionButton" parent="MenuItems/HostBar"]
layout_mode = 2

[node name="JoinBar" type="HBoxContainer" parent="MenuItems"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="MenuItems/JoinBar"]
layout_mode = 2
text = "Join an existing Duel"

[node name="IpAddressField" type="LineEdit" parent="MenuItems/JoinBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1

[node name="CustomBar" type="HBoxContainer" parent="MenuItems"]
layout_mode = 2

[node name="CustomButton" type="Button" parent="MenuItems/CustomBar"]
layout_mode = 2
text = "Customize your wizard"

[node name="Quit" type="Button" parent="MenuItems"]
layout_mode = 2
text = "Exit"

[node name="WaitingLobby" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="WaitingLobby"]
layout_mode = 2
size_flags_horizontal = 4
text = "Waiting for other duelists to arrive..."

[node name="WizardCustomization" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="WizardCustomization"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wizard customization placeholder"

[node name="NameBar" type="HBoxContainer" parent="WizardCustomization"]
layout_mode = 2

[node name="NameField" type="LineEdit" parent="WizardCustomization/NameBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="WizardCustomization"]
layout_mode = 2
text = "Save changes and return"

[connection signal="pressed" from="MenuItems/HostBar/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MenuItems/JoinBar/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MenuItems/CustomBar/CustomButton" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="MenuItems/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="WizardCustomization/SaveButton" to="." method="_on_save_button_pressed"]
